--- a/app/src/main/res/layout/activity_tasks_list.xml
+++ b/app/src/main/res/layout/activity_tasks_list.xml
@@ -23,6 +23,7 @@
         app:layout_anchorGravity="bottom|right"
         android:layout_marginRight="16dp"
         android:layout_marginBottom="16dp"
+        android:src="@drawable/ic_add_white_24px"
         android:layout_marginEnd="16dp"/>
 
 </android.support.design.widget.CoordinatorLayout>
