--- a/app/src/main/res/layout/activity_tasks_list.xml
+++ b/app/src/main/res/layout/activity_tasks_list.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/coordinator_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/coordinator_layout"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="pl.adamchodera.databasesshowcase.TasksListActivity">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
-        android:padding="16dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
@@ -18,12 +17,12 @@
         android:id="@+id/add_task_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:clickable="true"
-        app:layout_anchor="@id/recycler_view"
-        app:layout_anchorGravity="bottom|right"
-        android:layout_marginRight="16dp"
         android:layout_marginBottom="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:clickable="true"
         android:src="@drawable/ic_add_white_24px"
-        android:layout_marginEnd="16dp"/>
+        app:layout_anchor="@id/recycler_view"
+        app:layout_anchorGravity="bottom|right"/>
 
 </android.support.design.widget.CoordinatorLayout>
