--- a/app/src/main/res/layout/activity_task_details.xml
+++ b/app/src/main/res/layout/activity_task_details.xml
@@ -37,7 +37,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="top"
-                android:lines="5"
+                android:inputType="textMultiLine"
+                android:singleLine="false"
                 android:textColor="@color/text_primary"/>
         </android.support.design.widget.TextInputLayout>
     </LinearLayout>
